repos/emily-python/contents/test/parser/fail/importNoAtom.em
# Import too many symbols

# Arg: --ast2
# Expect failure

import a b
